// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge All 1`] = `
.c1 {
  display: inline-block;
  background-color: hsl(210,55%,80%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

.c2 {
  display: inline-block;
  background-color: hsl(0,100%,74%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Текст
  </div>
  <div
    className="c2"
    type="accent"
  >
    Текст
  </div>
</div>
`;

exports[`Storyshots Components/Badge Basic 1`] = `
.c0 {
  display: inline-block;
  background-color: hsl(210,55%,80%);
  border-radius: 10px;
  min-width: 20px;
  padding: 2px 8px;
  font-size: 12px;
  white-space: nowrap;
}

<div
  className="c0"
>
  Текст
</div>
`;

exports[`Storyshots Components/Burger Basic 1`] = `
.c0 {
  width: 28px;
  height: 20px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

.c0 > span {
  display: block;
  position: absolute;
  width: 100%;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
  height: 3px;
  background-color: black;
}

.c0 > span:nth-child(1) {
  top: 0;
}

.c0 > span:nth-child(2),
.c0 > span:nth-child(3) {
  top: 8px;
}

.c0 > span:nth-child(4) {
  top: 16px;
}

.c0.opened > span:nth-child(1) {
  top: 8px;
  width: 0%;
  left: 50%;
}

.c0.opened > span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.c0.opened > span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c0.opened > span:nth-child(4) {
  top: 8px;
  width: 0%;
  left: 50%;
}

<div
  className="c0"
  color="black"
>
  <span />
  <span />
  <span />
  <span />
</div>
`;

exports[`Storyshots Components/Button All 1`] = `
.c2 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 1px hsl(210,12%,33%);
}

.c2:hover {
  background: hsl(210,55%,80%);
}

.c2:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c2:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c2:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c3 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c3:hover {
  background: hsl(210,55%,80%);
}

.c3:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c3:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c3:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c4 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 2px 4px hsl(210,12%,33%);
}

.c4:hover {
  background: hsl(210,55%,80%);
}

.c4:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c4:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c4:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c5 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: hsl(210,55%,20%);
  border: 0;
  background: transparent;
}

.c5:hover {
  background: transparent;
}

.c5:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c5:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c5:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c7 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: transparent;
}

.c7:hover {
  background: transparent;
}

.c7:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c7:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c7:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c8 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: hsl(210,55%,20%);
  border: 0;
  background: transparent;
}

.c8:hover {
  background: transparent;
}

.c8:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c8:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c8:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c9 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: white;
  border: 0;
  background: hsl(210,55%,55%);
  box-shadow: 0 1px 1px hsl(210,12%,33%);
}

.c9:hover {
  background: hsl(210,55%,35%);
}

.c9:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c9:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c9:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c10 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: white;
  border: 0;
  background: hsl(210,55%,55%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c10:hover {
  background: hsl(210,55%,35%);
}

.c10:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c10:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c10:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c11 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: white;
  border: 0;
  background: hsl(210,55%,55%);
  box-shadow: 0 2px 4px hsl(210,12%,33%);
}

.c11:hover {
  background: hsl(210,55%,35%);
}

.c11:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c11:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c11:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c12 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: white;
  border: 0;
  background: transparent;
}

.c12:hover {
  background: transparent;
}

.c12:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c12:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c12:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c13 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: white;
  border: 0;
  background: transparent;
}

.c13:hover {
  background: transparent;
}

.c13:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c13:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c13:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c14 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: white;
  border: 0;
  background: transparent;
}

.c14:hover {
  background: transparent;
}

.c14:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c14:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c14:focus {
  outline: solid 1px hsl(210,55%,20%);
}

.c15 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: white;
  border: 0;
  background: hsl(0,60%,60%);
  box-shadow: 0 1px 1px hsl(210,12%,33%);
}

.c15:hover {
  background: hsl(0,100%,70%);
}

.c15:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c15:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c15:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c16 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: white;
  border: 0;
  background: hsl(0,60%,60%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c16:hover {
  background: hsl(0,100%,70%);
}

.c16:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c16:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c16:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c17 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: white;
  border: 0;
  background: hsl(0,60%,60%);
  box-shadow: 0 2px 4px hsl(210,12%,33%);
}

.c17:hover {
  background: hsl(0,100%,70%);
}

.c17:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c17:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c17:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c18 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: white;
  border: 0;
  background: transparent;
}

.c18:hover {
  background: transparent;
}

.c18:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c18:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c18:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c20 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: white;
  border: 0;
  background: transparent;
}

.c20:hover {
  background: transparent;
}

.c20:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c20:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c20:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c21 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: white;
  border: 0;
  background: transparent;
}

.c21:hover {
  background: transparent;
}

.c21:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c21:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c21:focus {
  outline: solid 1px hsl(0,100%,74%);
}

.c6 {
  position: absolute;
  top: 0;
  left: -20px;
  right: 0;
  bottom: 0;
  z-index: -1;
  box-shadow: inset 0 1px 2px hsl(210,12%,33%);
  background: linear-gradient( -45deg,hsl(210,55%,80%) 25%,hsl(210,80%,95%) 25%,hsl(210,80%,95%) 50%,hsl(210,55%,80%) 50%,hsl(210,55%,80%) 75%,hsl(210,80%,95%) 75%,hsl(210,80%,95%) ) 0 0 / 20px 20px;
  -webkit-animation: move-bg 1s linear infinite;
  animation: move-bg 1s linear infinite;
}

.c19 {
  position: absolute;
  top: 0;
  left: -20px;
  right: 0;
  bottom: 0;
  z-index: -1;
  box-shadow: inset 0 1px 2px hsl(210,12%,33%);
  background: linear-gradient( -45deg,hsl(0,100%,80%) 25%,hsl(0,100%,90%) 25%,hsl(0,100%,90%) 50%,hsl(0,100%,80%) 50%,hsl(0,100%,80%) 75%,hsl(0,100%,90%) 75%,hsl(0,100%,90%) ) 0 0 / 20px 20px;
  -webkit-animation: move-bg 1s linear infinite;
  animation: move-bg 1s linear infinite;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 > * + * {
  margin-top: 4px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-left: 4px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <button
      className="c2"
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c3"
    >
      Кнопка
    </button>
    <button
      className="c4"
      size="big"
    >
      Кнопка
    </button>
    <button
      className="c5"
      size="small"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c7"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c8"
      size="big"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c2"
      disabled={true}
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c3"
      disabled={true}
    >
      Кнопка
    </button>
    <button
      className="c4"
      disabled={true}
      size="big"
    >
      Кнопка
    </button>
  </div>
  <div
    className="c1"
  >
    <button
      className="c9"
      kind="primary"
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c10"
      kind="primary"
    >
      Кнопка
    </button>
    <button
      className="c11"
      kind="primary"
      size="big"
    >
      Кнопка
    </button>
    <button
      className="c12"
      kind="primary"
      size="small"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c13"
      kind="primary"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c14"
      kind="primary"
      size="big"
    >
      <div
        className="c6"
      />
      Кнопка
    </button>
    <button
      className="c9"
      disabled={true}
      kind="primary"
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c10"
      disabled={true}
      kind="primary"
    >
      Кнопка
    </button>
    <button
      className="c11"
      disabled={true}
      kind="primary"
      size="big"
    >
      Кнопка
    </button>
  </div>
  <div
    className="c1"
  >
    <button
      className="c15"
      kind="danger"
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c16"
      kind="danger"
    >
      Кнопка
    </button>
    <button
      className="c17"
      kind="danger"
      size="big"
    >
      Кнопка
    </button>
    <button
      className="c18"
      kind="danger"
      size="small"
    >
      <div
        className="c19"
      />
      Кнопка
    </button>
    <button
      className="c20"
      kind="danger"
    >
      <div
        className="c19"
      />
      Кнопка
    </button>
    <button
      className="c21"
      kind="danger"
      size="big"
    >
      <div
        className="c19"
      />
      Кнопка
    </button>
    <button
      className="c15"
      disabled={true}
      kind="danger"
      size="small"
    >
      Кнопка
    </button>
    <button
      className="c16"
      disabled={true}
      kind="danger"
    >
      Кнопка
    </button>
    <button
      className="c17"
      disabled={true}
      kind="danger"
      size="big"
    >
      Кнопка
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Button Basic 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c0:hover {
  background: hsl(210,55%,80%);
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,55%);
}

<button
  className="c0"
>
  Текст на кнопке
</button>
`;

exports[`Storyshots Components/Button Большая 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 20px;
  font-weight: bold;
  line-height: 24px;
  padding: 20px 32px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 2px 4px hsl(210,12%,33%);
}

.c0:hover {
  background: hsl(210,55%,80%);
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,55%);
}

<button
  className="c0"
  size="big"
>
  Большая кнопка
</button>
`;

exports[`Storyshots Components/Button Во время выполнения действия 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: transparent;
}

.c0:hover {
  background: transparent;
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c1 {
  position: absolute;
  top: 0;
  left: -20px;
  right: 0;
  bottom: 0;
  z-index: -1;
  box-shadow: inset 0 1px 2px hsl(210,12%,33%);
  background: linear-gradient( -45deg,hsl(210,55%,80%) 25%,hsl(210,80%,95%) 25%,hsl(210,80%,95%) 50%,hsl(210,55%,80%) 50%,hsl(210,55%,80%) 75%,hsl(210,80%,95%) 75%,hsl(210,80%,95%) ) 0 0 / 20px 20px;
  -webkit-animation: move-bg 1s linear infinite;
  animation: move-bg 1s linear infinite;
}

<button
  className="c0"
>
  <div
    className="c1"
  />
  Загружается...
</button>
`;

exports[`Storyshots Components/Button Главная 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: white;
  border: 0;
  background: hsl(210,55%,55%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c0:hover {
  background: hsl(210,55%,35%);
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,20%);
}

<button
  className="c0"
  kind="primary"
>
  Привет
</button>
`;

exports[`Storyshots Components/Button Маленькая 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 12px;
  font-weight: 500;
  line-height: 24px;
  padding: 0 8px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 1px hsl(210,12%,33%);
}

.c0:hover {
  background: hsl(210,55%,80%);
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,55%);
}

<button
  className="c0"
>
  Привет
</button>
`;

exports[`Storyshots Components/Button Неактивная 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c0:hover {
  background: hsl(210,55%,80%);
}

.c0:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c0:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c0:focus {
  outline: solid 1px hsl(210,55%,55%);
}

<button
  className="c0"
  disabled={true}
>
  Нельзя нажать
</button>
`;

exports[`Storyshots Components/ColumnNav Basic 1`] = `
.c1:hover {
  background-color: hsl(210,20%,97%);
}

.c2 {
  background-color: #ffffb3;
}

.c2:hover {
  background-color: #ffffb3;
}

.c0 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.c0 > li {
  padding: 8px 10px;
  cursor: pointer;
  font-size: 12px;
}

<nav>
  <ul
    className="c0"
  >
    <li
      className="c1"
      onClick={[Function]}
    >
      Item 1
    </li>
    <li
      className="c2"
      onClick={[Function]}
      selected={true}
    >
      Item 2
    </li>
    <li
      className="c1"
      onClick={[Function]}
    >
      Item 3
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Components/Input Basic 1`] = `
.c0 {
  padding: 0 6px;
  height: 32px;
  border: 2px solid hsl(210,55%,80%);
  line-height: 1;
  font-size: 16px;
}

.c0:focus {
  border: solid 2px hsl(210,55%,55%);
  outline: none;
  background-color: hsl(210,80%,95%);
}

.c0::-webkit-input-placeholder {
  color: hsl(210,12%,70%);
}

.c0::-moz-placeholder {
  color: hsl(210,12%,70%);
}

.c0:-ms-input-placeholder {
  color: hsl(210,12%,70%);
}

.c0::placeholder {
  color: hsl(210,12%,70%);
}

<input
  className="c0"
  placeholder="Введите текст"
  type="text"
/>
`;

exports[`Storyshots Components/Input Большое текстовое поле 1`] = `
.c0 {
  padding: 0 10px;
  height: 48px;
  border: 2px solid hsl(210,55%,80%);
  line-height: 1;
  font-size: 24px;
}

.c0:focus {
  border: solid 2px hsl(210,55%,55%);
  outline: none;
  background-color: hsl(210,80%,95%);
}

.c0::-webkit-input-placeholder {
  color: hsl(210,12%,70%);
}

.c0::-moz-placeholder {
  color: hsl(210,12%,70%);
}

.c0:-ms-input-placeholder {
  color: hsl(210,12%,70%);
}

.c0::placeholder {
  color: hsl(210,12%,70%);
}

<input
  className="c0"
  placeholder="Введите важный текст"
  scale="big"
  type="text"
/>
`;

exports[`Storyshots Components/Input Несколько полей 1`] = `
.c1 {
  padding: 0 6px;
  height: 32px;
  border: 2px solid hsl(210,55%,80%);
  line-height: 1;
  font-size: 16px;
}

.c1:focus {
  border: solid 2px hsl(210,55%,55%);
  outline: none;
  background-color: hsl(210,80%,95%);
}

.c1::-webkit-input-placeholder {
  color: hsl(210,12%,70%);
}

.c1::-moz-placeholder {
  color: hsl(210,12%,70%);
}

.c1:-ms-input-placeholder {
  color: hsl(210,12%,70%);
}

.c1::placeholder {
  color: hsl(210,12%,70%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  className="c0"
>
  <input
    className="c1"
    placeholder="Поле 1"
    type="text"
  />
  <input
    className="c1"
    placeholder="Поле 2"
    type="text"
  />
</div>
`;

exports[`Storyshots Components/Input Текстовое поле с меткой 1`] = `
.c1 {
  padding: 0 6px;
  height: 32px;
  border: 2px solid hsl(210,55%,80%);
  line-height: 1;
  font-size: 16px;
}

.c1:focus {
  border: solid 2px hsl(210,55%,55%);
  outline: none;
  background-color: hsl(210,80%,95%);
}

.c1::-webkit-input-placeholder {
  color: hsl(210,12%,70%);
}

.c1::-moz-placeholder {
  color: hsl(210,12%,70%);
}

.c1:-ms-input-placeholder {
  color: hsl(210,12%,70%);
}

.c1::placeholder {
  color: hsl(210,12%,70%);
}

.c0 {
  display: block;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.2;
  color: hsl(210,12%,43%);
}

<div>
  <label
    className="c0"
  >
    Метка:
  </label>
  <input
    className="c1"
    placeholder="Введите текст"
    type="text"
  />
</div>
`;

exports[`Storyshots Components/Modal Basic 1`] = `
.c4 {
  padding: 6px 10px;
  overflow: auto;
}

.c5 {
  padding: 6px 10px;
  border-top: 1px solid hsl(210,12%,92%);
}

.c2 {
  padding: 6px 10px;
  border-bottom: 1px solid hsl(210,12%,92%);
  font-weight: bold;
}

.c3 {
  float: right;
  border: none;
  background: none;
  padding: 0 2px;
  cursor: pointer;
  font-weight: bold;
  font-size: 16px;
  color: #333;
}

.c3:hover {
  color: red;
}

.c0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  opacity: 0.3;
  background-color: black;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 1001;
  min-width: 320px;
  overflow: auto;
  max-width: 800px;
  max-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid hsl(210,12%,92%);
  border-radius: 4px;
  background-color: white;
  box-shadow: 0 6px 12px rgba(0,0,0,0.3);
}

@media (min-width:1200px) {
  .c1 {
    min-width: 480px;
  }
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      Заголовок
      <button
        className="c3"
        onClick={[Function]}
      >
        ×
      </button>
    </header>
    <div
      className="c4"
    >
      Основной текст
    </div>
    <footer
      className="c5"
    >
      Футер
    </footer>
  </div>
</div>
`;

exports[`Storyshots Components/Modal Large Modal Story 1`] = `
.c4 {
  padding: 6px 10px;
  overflow: auto;
}

.c5 {
  padding: 6px 10px;
  border-top: 1px solid hsl(210,12%,92%);
}

.c2 {
  padding: 6px 10px;
  border-bottom: 1px solid hsl(210,12%,92%);
  font-weight: bold;
}

.c3 {
  float: right;
  border: none;
  background: none;
  padding: 0 2px;
  cursor: pointer;
  font-weight: bold;
  font-size: 16px;
  color: #333;
}

.c3:hover {
  color: red;
}

.c0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  opacity: 0.3;
  background-color: black;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  z-index: 1001;
  min-width: 320px;
  overflow: auto;
  max-width: 800px;
  max-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid hsl(210,12%,92%);
  border-radius: 4px;
  background-color: white;
  box-shadow: 0 6px 12px rgba(0,0,0,0.3);
}

@media (min-width:1200px) {
  .c1 {
    min-width: 480px;
  }
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  >
    <header
      className="c2"
    >
      Заголовок
      <button
        className="c3"
        onClick={[Function]}
      >
        ×
      </button>
    </header>
    <div
      className="c4"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam in arcu cursus euismod quis viverra nibh. In egestas erat imperdiet sed euismod nisi. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet. Nisl pretium fusce id velit. Morbi tempus iaculis urna id volutpat. Adipiscing commodo elit at imperdiet dui. Vitae aliquet nec ullamcorper sit. Nisi scelerisque eu ultrices vitae auctor eu augue. Nibh praesent tristique magna sit amet. Ut sem nulla pharetra diam. Mattis enim ut tellus elementum sagittis vitae et leo. Leo in vitae turpis massa sed elementum. Elit duis tristique sollicitudin nibh sit amet commodo nulla. Libero nunc consequat interdum varius sit amet mattis vulputate. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi. Tellus id interdum velit laoreet id donec ultrices. Egestas congue quisque egestas diam in arcu cursus. Integer malesuada nunc vel risus commodo. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Quis auctor elit sed vulputate mi sit amet mauris. Urna nec tincidunt praesent semper feugiat nibh sed pulvinar. Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Adipiscing vitae proin sagittis nisl rhoncus mattis. Diam phasellus vestibulum lorem sed risus ultricies tristique nulla. Platea dictumst vestibulum rhoncus est pellentesque elit. Libero justo laoreet sit amet. Feugiat vivamus at augue eget. Vitae aliquet nec ullamcorper sit. Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Diam ut venenatis tellus in. Volutpat odio facilisis mauris sit amet massa. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Urna porttitor rhoncus dolor purus non enim praesent elementum. Id velit ut tortor pretium. In eu mi bibendum neque egestas. Amet nulla facilisi morbi tempus iaculis. Magna ac placerat vestibulum lectus mauris ultrices eros. Id aliquet risus feugiat in ante. Amet nulla facilisi morbi tempus iaculis urna id volutpat lacus. Dolor purus non enim praesent elementum facilisis leo vel fringilla. Suspendisse interdum consectetur libero id faucibus nisl tincidunt.
    </div>
    <footer
      className="c5"
    >
      Футер
    </footer>
  </div>
</div>
`;

exports[`Storyshots Components/RowNav Basic 1`] = `
.c1 {
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  text-transform: uppercase;
  border-bottom: none;
}

.c1:hover {
  border-bottom: 4px solid hsl(210,12%,80%);
}

.c2 {
  font-weight: bold;
  font-size: 14px;
  line-height: 20px;
  text-transform: uppercase;
  border-bottom: 4px solid hsl(210,12%,58%);
}

.c0 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > li {
  padding: 8px 10px;
  cursor: pointer;
}

<nav>
  <ul
    className="c0"
  >
    <li
      className="c1"
      onClick={[Function]}
    >
      Item 1
    </li>
    <li
      className="c2"
      onClick={[Function]}
      selected={true}
    >
      Item 2
    </li>
    <li
      className="c1"
      onClick={[Function]}
    >
      Item 3
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Components/WithSidebar Basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  min-height: 100vh;
}

.c1 {
  background-color: hsl(210,20%,97%);
  border-right: 1px solid hsl(210,12%,80%);
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  height: 100vh;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h1>
      hello
    </h1>
  </div>
  <div
    className="c2"
  >
    Main app content
  </div>
</div>
`;

exports[`Storyshots Components/WithSidebar With Column Nav 1`] = `
.c3:hover {
  background-color: hsl(210,20%,97%);
}

.c4 {
  background-color: #ffffb3;
}

.c4:hover {
  background-color: #ffffb3;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.c2 > li {
  padding: 8px 10px;
  cursor: pointer;
  font-size: 12px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  min-height: 100vh;
}

.c1 {
  background-color: hsl(210,20%,97%);
  border-right: 1px solid hsl(210,12%,80%);
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  height: 100vh;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <nav>
      <ul
        className="c2"
      >
        <li
          className="c3"
          onClick={[Function]}
        >
          Item 1
        </li>
        <li
          className="c3"
          onClick={[Function]}
        >
          Item 2
        </li>
        <li
          className="c4"
          onClick={[Function]}
          selected={true}
        >
          Item 3 (active)
        </li>
        <li
          className="c3"
          onClick={[Function]}
        >
          Item 4
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="c5"
  >
    Main app content
  </div>
</div>
`;

exports[`Storyshots Layout/Column Basic 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Custom Gutter 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-top: 20px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Column Spaced 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

.c0 > * + * {
  margin-top: 4px;
}

<div
  style={
    Object {
      "height": 500,
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="c1"
    >
      button 1
    </button>
    <button
      className="c1"
    >
      button 2
    </button>
    <button
      className="c1"
    >
      button 3
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/ColumnsBlock Basic 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1400px;
  margin: 0 auto;
}

.c0 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media (max-width:639px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > * + * {
    margin-top: 20px;
  }
}

@media (min-width:640px) and (max-width:959px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > * + * {
    margin-top: 20px;
  }
}

@media (min-width:960px) and (max-width:1199px) {
  .c0 > * + * {
    margin-left: 40px;
  }
}

@media (min-width:1200px) {
  .c0 > * + * {
    margin-left: 80px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 1
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 2
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 3
  </div>
</div>
`;

exports[`Storyshots Layout/ColumnsBlock Custom Spaces 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 1400px;
  margin: 0 auto;
}

.c0 > * {
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@media (max-width:639px) {
  .c0 > * + * {
    margin-left: 3px;
  }
}

@media (min-width:640px) and (max-width:959px) {
  .c0 > * + * {
    margin-left: 10px;
  }
}

@media (min-width:960px) and (max-width:1199px) {
  .c0 > * + * {
    margin-left: 10px;
  }
}

@media (min-width:1200px) {
  .c0 > * + * {
    margin-left: 10px;
  }
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 1
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 2
  </div>
  <div
    style={
      Object {
        "backgroundColor": "#ddd",
      }
    }
  >
    Колонка 3
  </div>
</div>
`;

exports[`Storyshots Layout/ResponsivePadding Basic 1`] = `
@media (max-width:639px) {
  .c0 {
    padding: 0 10px;
  }
}

@media (min-width:640px) and (max-width:959px) {
  .c0 {
    padding: 0 20px;
  }
}

@media (min-width:960px) and (max-width:1199px) {
  .c0 {
    padding: 0 40px;
  }
}

@media (min-width:1200px) {
  .c0 {
    padding: 0 80px;
  }
}

<div
  style={
    Object {
      "border": "1px solid black",
    }
  }
>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "backgroundColor": "#ddd",
        }
      }
    >
      Содержимое
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout/Row Basic 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-left: 4px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Row Custom Gutter 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > * + * {
  margin-left: 20px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Layout/Row Spaced 1`] = `
.c1 {
  position: relative;
  z-index: 0;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  padding: 4px 16px;
  color: hsl(210,55%,20%);
  border: 0;
  background: hsl(210,80%,95%);
  box-shadow: 0 1px 2px hsl(210,12%,33%);
}

.c1:hover {
  background: hsl(210,55%,80%);
}

.c1:disabled {
  color: hsl(210,12%,58%);
  background: hsl(210,20%,97%);
  box-shadow: inset 0 0px 2px hsl(210,12%,33%);
}

.c1:active {
  -webkit-transform: scale(0.99);
  -ms-transform: scale(0.99);
  transform: scale(0.99);
  box-shadow: none;
}

.c1:focus {
  outline: solid 1px hsl(210,55%,55%);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c0 > * + * {
  margin-left: 4px;
}

<div
  className="c0"
>
  <button
    className="c1"
  >
    button 1
  </button>
  <button
    className="c1"
  >
    button 2
  </button>
  <button
    className="c1"
  >
    button 3
  </button>
</div>
`;

exports[`Storyshots Общее/Текст RichText 1`] = `
.c1 {
  margin: 32px 0;
  height: 1px;
  border: 0;
  border-top: 1px solid hsl(210,12%,92%);
}

.c0 {
  word-wrap: break-word;
}

.c0 a {
  color: hsl(210,80%,50%);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 hr {
  margin: 32px 0;
  height: 1px;
  border: 0;
  border-top: 1px solid hsl(210,12%,92%);
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c0 .responsive-object {
  position: relative;
}

.c0 .responsive-object iframe,
.c0 .responsive-object object,
.c0 .responsive-object embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
>
  <p>
    Внутри RichText автоматически работают кастомные стили
     
    <a
      href="http://example.com"
    >
      для ссылок
    </a>
    .
  </p>
  <hr
    className="c1"
  />
  <p>
    И для горизонтальных линий.
  </p>
</div>
`;

exports[`Storyshots Общее/Текст Горизонтальная черта 1`] = `
Array [
  <div>
    Текст над чертой (в div).
  </div>,
  .c0 {
  margin: 32px 0;
  height: 1px;
  border: 0;
  border-top: 1px solid hsl(210,12%,92%);
}

<hr
    className="c0"
  />,
  <div>
    Текст под чертой (в div).
  </div>,
  <p>
    Теперь тест отступа вокруг черты для параграфов. Этот текст в параграфе над чертой.
  </p>,
  .c0 {
  margin: 32px 0;
  height: 1px;
  border: 0;
  border-top: 1px solid hsl(210,12%,92%);
}

<hr
    className="c0"
  />,
  <p>
    А это текст в параграфе под чертой.
  </p>,
]
`;

exports[`Storyshots Общее/Текст Параграфы 1`] = `
<section>
  <p>
    Рационалисты, как известно, любят мету. Мета-уровень (от греческого "после" или "за пределами") — это уровень осмысления, выходящий за рамки объектного.
  </p>
  <p>
    Например, если разговор о моральных поступках можно считать объектным уровнем обсуждения, на котором речь идёт о конкретных действиях (зачастую в рамках конкретной морально-этической системы), то мета-обсуждением был бы диалог о различных моральных взглядах и выборе между ними. Другими словами, мы выходим за пределы конкретной системы и получаем возможность рассматривать её во всей полноте, а также сравнивать с другими системами, оценивать их плюсы и минусы.
  </p>
  <p>
    Можно выйти на уровень ещё выше и разбирать саму концепцию моральной системы и то, насколько наше текущее понимание этой концепции основывается на здравых предпосылках (существует целый раздел философии, занимающийся такими вопросами: мета-этика).
  </p>
</section>
`;

exports[`Storyshots Общее/Текст Список 1`] = `
<section>
  <p>
    Текст до списка.
  </p>
  <ul>
    <li>
      Элемент 1
    </li>
    <li>
      Элемент 2
    </li>
    <li>
      Элемент 3
    </li>
  </ul>
  <p>
    Текст после списка.
  </p>
</section>
`;

exports[`Storyshots Общее/Текст Ссылка 1`] = `
Array [
  .c0 {
  color: hsl(210,80%,50%);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
    Ссылки выглядят так: 
    <a
      className="c0"
      href="https://kocherga.club"
    >
      Кочерга
    </a>
    .
  </div>,
  <div>
    При этом не стилизируются по умолчанию (
    <a
      href="https://kocherga.club"
    >
      пример
    </a>
    ).
  </div>,
]
`;

exports[`Storyshots Общее/Цвета Все цвета 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c0 > * + * {
  margin-top: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 > * + * {
  margin-left: 4px;
}

.c2 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,80%,95%);
  text-align: center;
  line-height: 50px;
}

.c3 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,55%,80%);
  text-align: center;
  line-height: 50px;
}

.c4 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,55%,55%);
  text-align: center;
  line-height: 50px;
}

.c5 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,55%,35%);
  text-align: center;
  line-height: 50px;
}

.c6 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,55%,20%);
  text-align: center;
  line-height: 50px;
}

.c7 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,20%,97%);
  text-align: center;
  line-height: 50px;
}

.c8 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,92%);
  text-align: center;
  line-height: 50px;
}

.c9 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,80%);
  text-align: center;
  line-height: 50px;
}

.c10 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,70%);
  text-align: center;
  line-height: 50px;
}

.c11 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,58%);
  text-align: center;
  line-height: 50px;
}

.c12 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,43%);
  text-align: center;
  line-height: 50px;
}

.c13 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,38%);
  text-align: center;
  line-height: 50px;
}

.c14 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,33%);
  text-align: center;
  line-height: 50px;
}

.c15 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(210,12%,28%);
  text-align: center;
  line-height: 50px;
}

.c16 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(0,100%,90%);
  text-align: center;
  line-height: 50px;
}

.c17 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(0,100%,80%);
  text-align: center;
  line-height: 50px;
}

.c18 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(0,100%,74%);
  text-align: center;
  line-height: 50px;
}

.c19 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(0,100%,70%);
  text-align: center;
  line-height: 50px;
}

.c20 {
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background-color: hsl(0,60%,60%);
  text-align: center;
  line-height: 50px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="hsl(210, 80%, 95%)"
    >
      primary/
      100
    </div>
    <div
      className="c3"
      color="hsl(210, 55%, 80%)"
    >
      primary/
      300
    </div>
    <div
      className="c4"
      color="hsl(210, 55%, 55%)"
    >
      primary/
      500
    </div>
    <div
      className="c5"
      color="hsl(210, 55%, 35%)"
    >
      primary/
      700
    </div>
    <div
      className="c6"
      color="hsl(210, 55%, 20%)"
    >
      primary/
      900
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c7"
      color="hsl(210, 20%, 97%)"
    >
      grey/
      100
    </div>
    <div
      className="c8"
      color="hsl(210, 12%, 92%)"
    >
      grey/
      200
    </div>
    <div
      className="c9"
      color="hsl(210, 12%, 80%)"
    >
      grey/
      300
    </div>
    <div
      className="c10"
      color="hsl(210, 12%, 70%)"
    >
      grey/
      400
    </div>
    <div
      className="c11"
      color="hsl(210, 12%, 58%)"
    >
      grey/
      500
    </div>
    <div
      className="c12"
      color="hsl(210, 12%, 43%)"
    >
      grey/
      600
    </div>
    <div
      className="c13"
      color="hsl(210, 12%, 38%)"
    >
      grey/
      700
    </div>
    <div
      className="c14"
      color="hsl(210, 12%, 33%)"
    >
      grey/
      800
    </div>
    <div
      className="c15"
      color="hsl(210, 12%, 28%)"
    >
      grey/
      900
    </div>
  </div>
  <div
    className="c1"
  >
    <div
      className="c16"
      color="hsl(0, 100%, 90%)"
    >
      accent/
      100
    </div>
    <div
      className="c17"
      color="hsl(0, 100%, 80%)"
    >
      accent/
      300
    </div>
    <div
      className="c18"
      color="hsl(0, 100%, 74%)"
    >
      accent/
      500
    </div>
    <div
      className="c19"
      color="hsl(0, 100%, 70%)"
    >
      accent/
      700
    </div>
    <div
      className="c20"
      color="hsl(0, 60%, 60%)"
    >
      accent/
      900
    </div>
  </div>
</div>
`;
